--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_styled_toast: ^2.2.1
   image_picker: ^1.1.2
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
