--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_styled_toast: ^2.2.1
   image_picker: ^1.1.2
   google_sign_in: ^6.2.2
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
