--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.1.2
   google_sign_in: ^6.2.2
   logger: ^2.5.0
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
